--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -4,17 +4,13 @@
 //
 // ---------------------------------------------------------------
 
-// @todo: custom styling select
-
 .filter-form {
   @extend %clearfix;
-  @extend %clarat_rounding_start;
-  @extend %clarat_rounding_end;
   display: none;
   position: relative;
-  overflow: hidden;
-  margin-bottom: 20px;
-  padding: 10px 20px 25px 10px;
+  // overflow: hidden;
+  margin: -40px 0 45px;
+  padding: 10px 20px 5px 10px;
   background-color: $brand_beige;
 
   &.is-visible {
@@ -23,16 +19,26 @@
     display: flex;
   }
 
-  &:before {
+  &:after {
+    content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
+    height: 10px;
+    background: $brand_yellow;
     left: 0;
-    z-index: 20;
-    width: 75%;
-    height: 30px;
-    background: $brand_beige;
-    content: ' ';
+    right: 0;
+    border-radius: 0 0 4px 4px;
   }
+}
+
+.filter-form__fieldset__wrapper {
+  &.is-visible {
+    display: block;
+  }
+}
+
+.filter-form__fieldset__wrapper--age {
+  margin-bottom: 15px;
 }
 
 .filter-form__headline {
@@ -109,8 +115,26 @@
   margin: 0 0 5px;
   color: $brand_brown;
   font-weight: normal;
-  font-size: 13px;
+  font-size: 14px;
 }
+
+.filter-form__checkboxes-wrapper {
+  margin-left: 19px;
+
+  // @TODO: delete
+  label[for="contact_type_personal"] + & {
+    display: none;
+  }
+}
+
+.filter-form__checkbox-wrapper {
+  position: relative;
+}
+
+.filter-form__select {
+  max-width: 100%;
+}
+
 
 [type="submit"].filter-form__submit {
   @extend %clarat_rounding_end;
@@ -131,7 +155,8 @@
   width: 100%;
 }
 
-.filter-form__radio {
+.filter-form__radio,
+.filter-form__checkbox-wrapper {
   position: relative;
   display: block;
   margin-bottom: 2px;
