--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -36,6 +36,7 @@
     margin: 0 auto;
     padding: 30px 0 0;
     width: 820px;
+    display: inherit;
 
     #search_form_query,
     #search_form_search_location,
@@ -57,7 +58,7 @@
 #search_form_search_location {
   margin-right: 10px;
   padding: 0 15px 0 15px;
-  max-width: 310px;
+  max-width: 288px;
   background: $brand_white;
   font-size: 20px;
   line-height: 47px;
@@ -103,4 +104,7 @@
 .main-search__advanced-filter {
   display: table-cell;
   vertical-align: middle;
+  color: $brand_brown;
+  text-decoration: none;
+  font-size: 12px;
 }
