--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -387,7 +387,7 @@
   }
 
   .filter-form__fieldset {
-    padding-top: 0;
+    padding: 0;
     flex: 1 0 100%;
   }
 
@@ -403,6 +403,10 @@
     &[aria-collapsed="true"] {
       background: image-url('ico_fieldset_expand.svg') no-repeat right center;
     }
+  }
+
+  .filter-form__fieldset__wrapper {
+    display: none;
   }
 
   .filter-form__headline {
