For #470, and preparing ActiveScript refactor of responsible clickhandler

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -249,6 +249,10 @@
   .content-main {
     padding-top: 100px;
 
+    .has-enlarged-header & {
+      padding-top: 148px;
+    }
+
     .template--pages-home & {
       padding-top: 0;
     }
