#488 added section_filters to algolia search with family as default

--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -35,4 +35,5 @@
   = f.input :category, as: :hidden
   = f.input :exact_location, as: :hidden
   = f.input :contact_type, as: :hidden
+  = f.input :section, as: :hidden
   button.main-search__submit = t '.button'
