Change label wording

--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -7,4 +7,4 @@ header.header-main
       = render '/offers/shared/search_form', search_form: search_form,
                                              labels: :short
       .Distributor__advanced-filter-trigger-wrapper
-        a.main-search__advanced-filter#main-search__advanced-filter[href='#'] Weitere Suchoptionen
+        a.main-search__advanced-filter#main-search__advanced-filter[href='#'] Suchoptionen einblenden
