Reduce opacity on disabled checkbox labels, for #420

--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -129,6 +129,12 @@
 
 .filter-form__checkbox-wrapper {
   position: relative;
+
+  input[disabled] {
+    & + label {
+      opacity: .33;
+    }
+  }
 }
 
 .filter-form__select {
