for #508 - fix css selectors to include preview actions

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -301,7 +301,7 @@
     height: 136px;
   }
 
-  .template--offers-show {
+  .template--offers-show, .template--previews-show_offer {
 
     .page-detail__title {
       padding-right: 50px;
