--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -324,7 +324,9 @@
 
   .template--pages-faq,
   .template--offers-show,
-  .template--organizations-show {
+  .template--organizations-show,
+  .template--previews-show_offer,
+  .template--previews-show_organization {
     .content-main.content-main--wide {
       padding: 105px 0 0;
     }
