--- a/app/assets/stylesheets/modules/_mascot.scss
+++ b/app/assets/stylesheets/modules/_mascot.scss
@@ -32,11 +32,11 @@
     background-image: image-url('mascot--index.svg');
   }
 
-  .template--offers-show & {
+  .template--offers-show &, .template--previews-show_offer & {
     background-image: image-url('mascot--show.svg');
   }
 
-  .template--organizations-show & {
+  .template--organizations-show &, .template--previews-show_organization & {
     background-image: image-url('mascot--organization.svg');
   }
 
