--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -4,7 +4,7 @@
 //
 // ---------------------------------------------------------------
 
-.template--offers-show {
+.template--offers-show, .template--previews-show_offer {
 
   .section-content--internet-presence .section-content__title {
     background: $brand_grey;
