--- a/app/assets/stylesheets/modules/_banner.scss
+++ b/app/assets/stylesheets/modules/_banner.scss
@@ -18,6 +18,18 @@
   display: inline-block;
   padding-left: 48px;
   width: auto;
+
+  // Temporarily disable to focus on Refugees
+  // &:before {
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   width: 40px;
+  //   height: 40px;
+  //   background: image-url('buggy.svg') bottom left no-repeat;
+  //   content: '';
+  // }
+
 }
 
 .Banner__link {
