Change beta banner background color to refugee color

--- a/app/assets/stylesheets/modules/_banner.scss
+++ b/app/assets/stylesheets/modules/_banner.scss
@@ -7,7 +7,7 @@
 .Banner {
   @extend %roboto_bold;
   min-height: 44px;
-  background: $brand_blue;
+  background: #006699;
   color: $brand_white;
   text-align: center;
   line-height: 40px;
