--- a/app/assets/stylesheets/base/_aside.scss
+++ b/app/assets/stylesheets/base/_aside.scss
@@ -4,7 +4,9 @@
 //
 // ---------------------------------------------------------------
 .aside-standard {
-  transition: top 0.33s
+  position: absolute;
+  top: 0;
+  transition: top 0.1s
 }
 
 .aside-standard__headline {
