--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -327,6 +327,10 @@
     }
   }
 
+  .content-main.content-main--offers-index {
+    padding-left: 0;
+  }
+
   .section-team__member {
     width: 49%;
     min-height: 670px;
