Prevent stickyness in IE since its position fixed implementation is broken

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -319,6 +319,11 @@
     margin-bottom: 0;
   }
 
+  .aside-standard {
+    width: 100% !important; // overrinding sticky JS
+    top: 0 !important; // overrinding sticky JS
+  }
+
   .content-main,
   .Categories {
     .template--offers-index & {
