Add color demos

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -20,6 +20,10 @@ $brand-violet: #a586bb;
 $font_color: $brand_brown;
 
 
+$brand_core_family: rgb(172, 20, 90);
+$brand_core_refugees: rgb(0, 112, 150);
+
+
 // Geometry
 
 $border_radius: 10px;
