--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -8,6 +8,14 @@
         h2.Claim__firstrow = t '.claim.first_row'
         h3.Claim__secondrow = t '.claim.second_row'
 
+      nav.nav-world
+        .wrapper-inner
+          ul.nav-world__list
+            li
+              a[href="#"] Family
+            li
+              a[href="#"] Refugees
+
     .header-main__stage
       / Optional stage for animations
 
