for #420 - implement encounter search filtering

--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -36,10 +36,10 @@ div.Distributor__search-form
       = f.input :category, as: :hidden
       = f.input :exact_location, as: :hidden
       = f.input :contact_type, as: :hidden
+      = f.input :encounters, as: :hidden
       = f.input :age, as: :hidden
       = f.input :target_audience, as: :hidden
       = f.input :exclusive_gender, as: :hidden
       = f.input :language, as: :hidden
-      = f.input :encounter, as: :hidden
       = f.input :section, as: :hidden
     button.main-search__submit = t '.button'
