--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,7 @@
 @import "navigation/nav-sections";
 @import "navigation/nav-site";
 @import "navigation/nav-legal";
-@import "navigation/nav-world";
+@import "navigation/nav-welt";
 @import "vendor/pagination";
 
 @import "mediaqueries/config";
