--- a/app/assets/stylesheets/modules/_distributor.scss
+++ b/app/assets/stylesheets/modules/_distributor.scss
@@ -5,13 +5,22 @@
 // ---------------------------------------------------------------
 
 .Distributor {
-  @extend %clarat_rounding_start;
+  //@extend %clarat_rounding_start;
   float: right;
   margin-top: 40px;
   max-width: 61.8%;
   height: 100px;
   background: $brand_yellow;
   z-index: 2;
+  position: relative;
+
+  body.refugees & {
+    border-top: 6px solid $brand_core_refugees;
+  }
+
+  body.family & {
+    border-top: 6px solid $brand_core_family;
+  }
 }
 
 .Distributor--start {
@@ -25,4 +34,6 @@
   &:after {
     display: none;
   }
+
+
 }
