--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -11,9 +11,9 @@
       nav.nav-welt.nav-welt--start
         ul.nav-welt__list
           li.nav-welt__listitem
-            a#clarat--family[href="#"] Family
+            a#clarat--family[href='javascript:;'] Family
           li.nav-welt__listitem
-            a#clarat--refugees[href="#"] Refugees
+            a#clarat--refugees[href='javascript:;'] Refugees
 
     .header-main__stage
       / Optional stage for animations
@@ -41,6 +41,7 @@
                       search_form.search_location,
                     'search_form[generated_geolocation]' => \
                       search_form.generated_geolocation)
+            / TODO: REMOVE and replace with actual category:
             li.nav-sections__listitem.nav-sections__listitem--c-learn
-              a[href='#']
+              a[href='/angebote?search_form%5Bcategory%5D=Familie&amp;search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&amp;search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954']
                 | Lernen 2
