--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -28,11 +28,6 @@
     font-size: 12px;
   }
 
-  .Logo {
-    margin-top: 25px;
-    margin-bottom: 15px;
-    margin-left: 20px;
-  }
 
   .Logo--start {
     margin-left: 0;
@@ -63,9 +58,17 @@
     height: 320px;
   }
 
+  body.family,
+  body.refugees {
+    .Logo--start {
+      background-size: 180px 40px;
+    }
+  }
+
   .Logo {
+    margin-bottom: 15px;
     position: absolute;
-    top: 10px;
+    bottom: 35px;
     z-index: 20;
     margin-top: 5px;
     margin-left: 15px;
@@ -74,12 +77,25 @@
     background-image: image-url('logo-c.svg');
     background-size: 90px 20px;
     background-repeat: no-repeat;
+
+
+    body.refugees &.Logo--notstart {
+      background-image: image-url('logo-c--refugees.svg');
+      background-size: 90px 20px;
+      background-repeat: no-repeat;
+    }
+
+    body.family &.Logo--notstart {
+      background-image: image-url('logo-c--family.svg');
+      background-size: 90px 20px;
+      background-repeat: no-repeat;
+    }
   }
 
 
   .Logo--start {
     position: relative;
-    top: auto;
+    bottom: auto;
     margin-top: 25px;
     margin-left: 0;
     width: 180px;
@@ -105,14 +121,14 @@
 
   .Distributor--navigation {
     padding-bottom: 0;
-    max-height: 55px;
+    //max-height: 61px;
     max-width: 1000px;
     width: 100%;
     margin: 0;
     border-top-left-radius: 0;
 
     &.is-enlarged {
-      max-height: 95px;
+     // max-height: 95px;
     }
 
     .JS-Geolocation__prompt {
@@ -288,6 +304,38 @@
     }
   }
 
+  .nav-welt {
+    top: 0;
+  }
+
+  .nav-welt--notstart {
+    position: relative;
+  }
+
+  .nav-welt__list {
+    width: auto;
+    margin: 0 -25px;
+    display: block;
+
+    &:first-child a {
+      border-radius: 0;
+    }
+
+  }
+
+  .nav-welt__listitem {
+    width: 50%;
+
+    a {
+      width: 100%;
+      border-bottom: none;
+    }
+  }
+
+  .nav-welt--start {
+    top: auto;
+  }
+
   .filter-form {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
@@ -401,7 +449,7 @@
   }
 
   .content-main {
-    padding-top: 36px;
+    padding-top: 0;
 
     .template--pages-home & {
       //padding-top: 0;
