--- a/app/assets/stylesheets/modules/_logo.scss
+++ b/app/assets/stylesheets/modules/_logo.scss
@@ -11,8 +11,16 @@
   margin-top: 46px;
   width: 215px;
   height: 47px;
-  background: image-url('logo.svg');
-  background-size: 215px 47px;
+
+  body.refugees & {
+    background: image-url('logo--refugees.svg');
+    background-size: 215px 47px;
+  }
+
+  body.family & {
+    background: image-url('logo--family.svg');
+    background-size: 215px 47px;
+  }
 
   a {
     display: block;
@@ -26,4 +34,14 @@
   width: 297px;
   height: 65px;
   background-size: 297px 65px;
+
+  body.refugees & {
+    background: image-url('logo--refugees.svg');
+    background-size: 297px 65px;
+  }
+
+  body.family & {
+    background: image-url('logo--family.svg');
+    background-size: 297px 65px;
+  }
 }
