--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -9,11 +9,12 @@
         h3.Claim__secondrow = t '.claim.second_row'
 
       nav.nav-welt.nav-welt--start
-        ul.nav-welt__list
-          li.nav-welt__listitem
-            a#clarat--family[href="#"] Family
-          li.nav-welt__listitem
-            a#clarat--refugees[href="#"] Refugees
+        .wrapper-inner
+          ul.nav-welt__list
+            li.nav-welt__listitem.nav-welt__listitem--start
+              a#clarat--family[href="#"] Family
+            li.nav-welt__listitem.nav-welt__listitem--start
+              a#clarat--refugees[href="#"] Refugees
 
     .header-main__stage
       / Optional stage for animations
