--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -1,16 +1,15 @@
 header.header-main
   .wrapper-inner
-    h1.Logo.Logo = link_to 'clarat.org', '/'
+    h1.Logo.Logo--notstart = link_to 'clarat.org', '/'
     .mascot.mascot--header
 
     .Distributor.Distributor--navigation
-      nav.nav-welt
-        .wrapper-inner
-          ul.nav-welt__list
-            li.nav-welt__listitem
-              a#clarat--family[href="#"] Family
-            li.nav-welt__listitem
-              a#clarat--refugees[href="#"] Refugees
+      nav.nav-welt.nav-welt--notstart
+        ul.nav-welt__list
+          li.nav-welt__listitem
+            a#clarat--family[href="#"] Family
+          li.nav-welt__listitem
+            a#clarat--refugees[href="#"] Refugees
       = render '/offers/shared/search_form', search_form: search_form,
                                              labels: :short
       .Distributor__advanced-filter-trigger-wrapper
