--- a/app/views/offer_mailer/inform.html.haml
+++ b/app/views/offer_mailer/inform.html.haml
@@ -29,7 +29,8 @@
     = '"' + @offers.first.name.strip + '",'
     zu finden unter folgendem Link:
     %br
-    = link_to offer_url(@offers.first), offer_url(@offers.first)
+    = link_to unscoped_offer_url(@offers.first),
+              unscoped_offer_url(@offers.first)
   - else
     Ihre Angebote heißen bei clarat:
     %ul
@@ -38,7 +39,7 @@
           = '"' + offer.name.strip + '",'
           zu finden unter folgendem Link:
           %br
-          = link_to offer_url(offer), offer_url(offer)
+          = link_to unscoped_offer_url(offer), unscoped_offer_url(offer)
 
 %p
   Hat sich irgendwo ein Fehler eingeschlichen? Dann melden Sie sich bei uns. Nur
