--- a/app/views/pages/not_found.html.slim
+++ b/app/views/pages/not_found.html.slim
@@ -5,6 +5,4 @@
   main.content-main.content-main--wide
     .wrapper-inner
       h1= t '.heading'
-      p== t '.description',
-        start_page: \
-        link_to('hier', '/')
+      p== t '.description', start_page: link_to('hier', root_path)
