--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -37,29 +37,31 @@ footer.footer-main
                   }
                 script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"
 
-        - cache 'footer_links_4' do
+        - cache "#{current_section}_footer_links_4" do
 
           nav.nav-site
             ul.nav-site__list
               li.nav-site__listitem
-                = link_to t('.about'), '/ueber-uns'
+                = link_to t('.about'), about_path(section: current_section)
               li.nav-site__listitem
-                = link_to t('.faq'), '/haeufige-fragen'
+                = link_to t('.faq'), faq_path(section: current_section)
               li.nav-site__listitem
-                = link_to t('.contact'), new_contact_path
+                = link_to t('.contact'),
+                          new_contact_path(section: current_section)
 
-  - cache 'footer_links_3' do
+  - cache "#{current_section}_footer_links_3" do
 
     section.footer-main__secondrow
       .wrapper-inner
         nav.nav-legal
           ul.nav-legal__list
             li.nav-legal__listitem
-              = link_to t('.impressum'), '/impressum'
+              = link_to t('.impressum'),
+                        impressum_path(section: current_section)
             li.nav-legal__listitem
-              = link_to t('.tos'), '/rechtliche-hinweise'
+              = link_to t('.tos'), agb_path(section: current_section)
             li.nav-legal__listitem
-              = link_to t('.privacy'), '/datenschutzhinweise'
+              = link_to t('.privacy'), privacy_path(section: current_section)
             / li.nav-legal__listitem
             /   / TODO: Refactor or remove after translation testing
             /   #google_translate_element.JS-tooltip
