#545 simple algolia highlighting for name and orga_display_name

--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -65,6 +65,9 @@
   display: inherit;
 }
 
+.Listing-keyword__highlight{
+  color: $font_color_highlight
+}
 
 .Listing-results__offer,
 .Listing-results__offerinfo {
