for #511 - refactor part of the gmaps module, enlarge map on click, remove controls

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -46,6 +46,9 @@
                 #map-data data={ markers: @markers.to_json }
                 #map-canvas
 
+              #big-map
+                button.big-map_close X
+
             = render 'offers/show/who_location', offer: @offer,
                                                markers: @markers
 
