--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -56,6 +56,8 @@
               #map-container
                 #map-data data={ markers: @markers.to_json }
                 #map-canvas
+              #big-map
+                button.big-map_close X
 
 
       = link_to new_contact_path,
