--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -22,20 +22,15 @@ footer.footer-main
         /               class: 'Social-media__item Social-media__item--facebook'
 
       .footer-main__about
-        - cache 'footer_links_2' do
-
-          .mascot.mascot--footer
-          nav.nav-site
-            ul.nav-site__list
-              li.nav-site__listitem
-                = link_to t('.blog'), 'http://blog.clarat.org/'
-              li.nav-site__listitem
-                #google_translate_element.JS-tooltip
-                javascript:
-                  function googleTranslateElementInit() {
-                    new google.translate.TranslateElement({pageLanguage: 'de', includedLanguages: 'ar,en,fr,pl,ru,tr', gaTrack: true, gaId: 'UA-59626864-1'}, 'google_translate_element');
-                  }
-                script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"
+        .mascot.mascot--footer
+        nav.nav-site
+          ul.nav-site__list
+            li.nav-site__listitem
+              = link_to t('.blog'), 'http://blog.clarat.org/'
+            li.nav-site__listitem
+              - I18n.available_locales.each do |locale|
+                =< link_to image_tag(image_path("flags/#{locale}.svg"), style: 'width: 15px; height: 10px;'),
+                           url_for(locale: locale.to_s, only_path: true)
 
         - cache "#{current_section}_footer_links_4" do
 
