Finalize colors for family and refugees

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -20,8 +20,8 @@ $brand-violet: #a586bb;
 $font_color: $brand_brown;
 
 
-$brand_core_family: rgb(172, 20, 90);
-$brand_core_refugees: rgb(0, 112, 150);
+$brand_core_family: #af1d3f;
+$brand_core_refugees: #006b81;
 
 
 // Geometry
