--- a/app/assets/stylesheets/modules/_banner.scss
+++ b/app/assets/stylesheets/modules/_banner.scss
@@ -8,7 +8,7 @@
   display: none; // REMOVE
   @extend %roboto_bold;
   min-height: 44px;
-  background: #007096;
+  background: #006b81;
   color: $brand_white;
   text-align: center;
   line-height: 40px;
