--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -49,6 +49,18 @@
 
 }
 
+@font-face {
+  font-family: 'roboto-black';
+  src: asset-url('Roboto-Black-webfont.eot');
+  src: asset-url('Roboto-Black-webfont.eot?#iefix') format('embedded-opentype'),
+  asset-url('Roboto-Black-webfont.woff') format('woff'),
+  asset-url('Roboto-Black-webfont.ttf') format('truetype'),
+  asset-url('Roboto-Black-webfont.svg#robotoitalic') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 %roboto_regular {
   font-family: 'roboto-regular', 'Roboto', sans-serif;
 }
@@ -63,6 +75,10 @@
 
 %roboto_italic {
   font-family: 'roboto-italic', 'Roboto', sans-serif;
+}
+
+%roboto_black {
+  font-family: 'roboto-black', 'Roboto', sans-serif;
 }
 
 body {
