--- a/app/assets/stylesheets/navigation/_nav-welt.scss
+++ b/app/assets/stylesheets/navigation/_nav-welt.scss
@@ -1,6 +1,6 @@
 .nav-welt {
   position: absolute;
-  top: -45px;
+  top: -50px;
   left: 0;
   right: 0;
 }
@@ -26,17 +26,33 @@
   }
 
   a {
-    @extend %roboto_bold;
+    @extend %roboto_black;
     display: inline-block;
     padding: 7px 19px;
     color: $brand_white;
     text-decoration: none;
     text-transform: uppercase;
     background: $brand-grey;
-    letter-spacing: 1px;
-    font-size: 20px;
-    height: 39px;
-    border-bottom: 1px solid #fff;
+    letter-spacing: 3px;
+    font-size: 22px;
+    text-align: center;
+    height: 50px;
+    min-width: 208px;
+    line-height: 30px;
+    border-bottom: 6px solid;
+
+    body.refugees & {
+      border-bottom-color: $brand_core_refugees;
+    }
+
+    body.family & {
+      border-bottom-color: $brand_core_family;
+    }
+
+    body.family.template--pages-home & ,
+    body.refugees.template--pages-home & {
+      border-bottom: none;
+    }
 
     &:before {
       display: inline-block;
@@ -44,8 +60,9 @@
       width: 0;
       height: 0;
       margin-right: 8px;
+      margin-bottom: -2px;
       border-style: solid;
-      border-width: 6px 0 6px 7px;
+      border-width: 10px 0 10px 10px;
       border-color: transparent transparent transparent $brand_white;
     }
   }
@@ -56,6 +73,9 @@
     padding: 11px 39px;
     height: 50px;
   }
+
+
+
 }
 
 #clarat--refugees {
@@ -66,6 +86,7 @@
 
     &:before {
       visibility: hidden;
+      display: none;
     }
   }
 }
@@ -78,6 +99,7 @@
 
     &:before {
       visibility: hidden;
+      display: none;
     }
   }
 }
