Basic implementation of new design: Medium

--- a/app/assets/stylesheets/mediaqueries/_config.scss
+++ b/app/assets/stylesheets/mediaqueries/_config.scss
@@ -15,13 +15,13 @@
     @media (max-width: 750px) { @content; }
   }
   @if $point == S {
-    @media (max-width: 440px) { @content; }
+    @media (max-width: 500px) { @content; }
   }
 }
 
 @mixin mqindicator($mqname) {
 
-  $debug: true;
+  $debug: false;
 
   @if $debug == true {
     body:before {
