--- a/app/assets/stylesheets/modules/_distributor.scss
+++ b/app/assets/stylesheets/modules/_distributor.scss
@@ -37,6 +37,15 @@
   width: 110px;
   display: none;
 
+  //body.family & {
+  //  background-color: rgba($brand_core_family, .6);
+  //}
+  //
+  //body.refugees & {
+  //  background-color: rgba($brand_core_refugees, .6);
+  //}
+
+
   .template--offers-index & {
     display: table;
   }
